Add console app to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ obj/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/dotnetcore,visualstudiocode
+NeptunScheduler.ConsoleApp/*
