--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,8 @@ obj/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/dotnetcore,visualstudiocode
-NeptunScheduler.ConsoleApp/*
+NeptunScheduler.ConsoleApp/
+NeptunScheduler.API/Migrations/
+Migrations/
+Database.db
+
