Move Data layer to a classlib

--- a/NeptunScheduler.API/NeptunScheduler.API.csproj
+++ b/NeptunScheduler.API/NeptunScheduler.API.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NeptunScheduler.Models\NeptunScheduler.Models.csproj" />
+    <ProjectReference Include="..\NeptunScheduler.Data\NeptunScheduler.Data.csproj" />
   </ItemGroup>
 
 </Project>
