Integrate SubjectRepository into the API

--- a/NeptunScheduler.API/NeptunScheduler.API.csproj
+++ b/NeptunScheduler.API/NeptunScheduler.API.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\NeptunScheduler.Models\NeptunScheduler.Models.csproj" />
     <ProjectReference Include="..\NeptunScheduler.Data\NeptunScheduler.Data.csproj" />
+    <ProjectReference Include="..\NeptunScheduler.Repository\NeptunScheduler.Repository.csproj" />
   </ItemGroup>
 
 </Project>
